# MaskClaw

./: .env.ollama  .gitignore  AGENTS.md  Dockerfile  README.en.md  README.md  README_EN.md  README_en.md  STARTUP.md  api_server.py  auth_router.py  autoglm_server.py  demo.py  docker-compose.yml  evolution_daemon.py  guard_backend_service.py  guard_core.py  guard_router.py  maskclaw.db  notifications_router.py  preset_demo_accounts.sql  proxy_agent.py  pyproject.toml  requirements.txt  review_router.py  review_service.py  run_all.sh  run_with_privacy.sh  stop_all.sh  test_evolution_demo.py  test_mock_publish.py  test_telemetry.py
Open-AutoGLM-main/: Untitled  main.py  requirements.txt
config/: evolution_config.json
docs/: ARCHITECTURE.md  CLI_SERVE_GUIDE.md  PROMPT_TEMPLATES.md  RAG_SCHEMA.md  SESSION_TRACE_FORMAT.md  SKILLS_API.md  self_evolution_mechanism.md
frontend/: components.json
maskclaw_cli/: __init__.py  context.py  main.py  output.py
memory/: candidate_rules_pending.jsonl  chat_history_db.py  chroma_manager.py  log_processor.py  rag_client.py
model_server/: __init__.py  minicpm_api.py  ollama_api.py  ollama_example.py  requirements.txt
prompts/: evolution_rule_extract.txt  evolution_skill_writing.txt  privacy_analysis.txt  relevance_assessment.txt  retrieval_decision.txt
sandbox/: checklist_evaluator.py  sandbox_validator.py  semantic_evaluator.py
scripts/: download_ollama_models.sh  generate_skills.py  migrate_logs_to_chains.py  seed_notifications.py  seed_skills_db.py  split_traces.py
skill_registry/: __init__.py  skill_db.py  (+1 more)
(+260 files in other folders)
