[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maskclaw-cli"
dynamic = ["version"]
description = "CLI entrypoint for MaskClaw privacy guard workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
maskclaw = "maskclaw_cli.main:run"

[tool.setuptools]
packages = ["maskclaw_cli"]

[tool.setuptools.dynamic]
version = {attr = "maskclaw_cli.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
